# rust-in-clion

./: Cargo.toml
src/: lib.rs
tests/: lib.rs
